# simple_src

./: .gitignore  Cargo.toml  LICENSE  README.md  plots.py
.github/workflows/: rust.yml
benches/: bench1.rs  src_bench.rs
examples/: e1.rs  perf1.rs  two_channels.rs
src/: lib.rs  linear.rs  ratio.rs  sinc.rs
tests/: linear.rs  perf.rs  sinc.rs  testwav.rs
